--- a/user/index.html
+++ b/user/index.html
@@ -17,67 +17,81 @@
     }
   </style>
 </head>
-<hr>
-<h2>Чат с поддержкой</h2>
-<div id="chat" style="height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;"></div>
-<input type="text" id="chatInput" placeholder="Введите сообщение..." style="width: 80%;">
-<button onclick="sendMessage()">Отправить</button>
-
-<script>
-  const chatBox = document.getElementById('chat');
-  const input = document.getElementById('chatInput');
-
-  const ws = new WebSocket('ws://localhost:4000');
-
-  ws.onmessage = (event) => {
-    const p = document.createElement('p');
-    p.textContent = event.data;
-    chatBox.appendChild(p);
-    chatBox.scrollTop = chatBox.scrollHeight;
-  };
-
-  function sendMessage() {
-    if (input.value.trim()) {
-      ws.send("Пользователь: " + input.value);
-      input.value = '';
-    }
-  }
-</script>
-
 <body>
   <h1>Каталог товаров</h1>
   <div id="products" class="card-container"></div>
 
+  <div style="margin-top: 30px;">
+    <h2>Чат с поддержкой</h2>
+    <div id="chatBox" style="height: 200px; border: 1px solid #ccc; border-radius: 6px; padding: 8px; overflow-y: auto; background-color: #f5f5f5; font-size: 14px; margin-bottom: 10px;"></div>
+    <div style="display: flex; gap: 6px; align-items: center;">
+      <input type="text" id="chatInput" placeholder="Сообщение..." style="flex: 1; padding: 6px 10px; font-size: 14px; border-radius: 4px; border: 1px solid #ccc;">
+      <button onclick="sendMessage()" style="padding: 6px 14px; font-size: 14px; background-color: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer;">Отпр.</button>
+    </div>
+  </div>
+
+  <script>
+    const ROLE = "Пользователь";
+    const ws = new WebSocket('ws://localhost:4000');
+    const chatBox = document.getElementById('chatBox');
+    const input = document.getElementById('chatInput');
+
+    function appendMessage(text) {
+      const bubble = document.createElement('div');
+      const isMine = text.startsWith(ROLE + ":");
+      bubble.textContent = text;
+      bubble.style.margin = '4px 0';
+      bubble.style.padding = '6px 10px';
+      bubble.style.borderRadius = '10px';
+      bubble.style.maxWidth = '70%';
+      bubble.style.wordBreak = 'break-word';
+      bubble.style.backgroundColor = isMine ? '#cce5ff' : '#e8e8e8';
+      bubble.style.alignSelf = isMine ? 'flex-end' : 'flex-start';
+      chatBox.appendChild(bubble);
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
+
+    ws.onmessage = (event) => {
+      appendMessage(event.data);
+    };
+
+    function sendMessage() {
+      const msg = input.value.trim();
+      if (!msg) return;
+      const fullMsg = `${ROLE}: ${msg}`;
+      ws.send(fullMsg);
+      appendMessage(fullMsg);
+      input.value = '';
+    }
+  </script>
+
   <script>
     fetch('/graphql', {
-  method: 'POST',
-  headers: { 'Content-Type': 'application/json' },
-  body: JSON.stringify({
-    query: `
-      {
-        productsShort {
-          name
-          price
-        }
-      }
-    `
-  })
-})
-.then(res => res.json())
-.then(result => {
-  const products = result.data.productsShort;
-  const container = document.getElementById('products');
-  products.forEach(product => {
-    const card = document.createElement('div');
-    card.className = 'card';
-    card.innerHTML = `
-      <h3>${product.name}</h3>
-      <p><strong>Цена:</strong> ${product.price} ₽</p>
-    `;
-    container.appendChild(card);
-  });
-});
-
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        query: `{
+          productsShort {
+            name
+            price
+          }
+        }`
+      })
+    })
+    .then(res => res.json())
+    .then(result => {
+      const products = result.data.productsShort;
+      const container = document.getElementById('products');
+      products.forEach(product => {
+        const card = document.createElement('div');
+        card.className = 'card';
+        card.innerHTML = `
+          <h3>${product.name}</h3>
+          <p><strong>Цена:</strong> ${product.price} ₽</p>
+        `;
+        container.appendChild(card);
+      });
+    });
   </script>
 </body>
 </html>
